# cdd-rust

./: Cargo.toml  Makefile  README.md  default.nix
src/: extractors.rs  generator.rs  main.rs  models.rs  parser.rs  rpc.rs  rustfmt.rs  writers.rs
src/extractor/: mod.rs  models.rs  requests.rs
src/generators/: mod.rs
src/server/: mod.rs
src/util/: mod.rs
src/visitors/: functions.rs  mod.rs  models.rs  requests.rs  struct_visitor.rs  structs.rs  variables.rs
src/writers/: functions.rs  mod.rs  models.rs  requests.rs  variable_type.rs
