[package]
name = "cdd-rust"
version = "0.1.0"
authors = ["Rob Saunders <rob@wearebrandnew.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "1.8.0"
syn = { version = "0.15.29", features = ["parsing", "full", "extra-traits", "visit"] }
structopt = "0.3.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
cdd = { git = "https://github.com/offscale/cdd-ctl.git" }
failure = "0.1.6"