[package]
name = "cdd-rust"
version = "0.1.0"
authors = ["Rob Saunders <rob@wearebrandnew.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0", features = ["parsing", "full", "extra-traits", "visit"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
cdd = { git = "https://github.com/offscale/cdd-core" }
failure = "0.1.6"
jsonrpc-ws-server = "14.0"